complete exploring data vignette

--- a/vignettes/ExploringData.Rmd
+++ b/vignettes/ExploringData.Rmd
@@ -55,13 +55,13 @@ ggplot(data = df) +
   geom_histogram(mapping = aes(x = pH), bins = 10)
 ```
 
-We assign the *data source* in `ggplot()`, and describe the *aesthetic mapping* (the connection of data to visual properties) in the `geom_histogram()` call. The code shown above will produce this plot:
+We assign the *data source* in `ggplot()`, and describe the *aesthetic mapping* (the connection of data to visual properties) in the `geom_histogram()` call. The code shown above will produce this plot of the distribution of pH values:
 
 ![](pH_hist.png)
 
 ### Visualizing Drift Over Time
 
-The key feature of `driftR` is the correction of drift that occurs over time. We can visualize this change in our data with a few additional steps. Before we create the plot, we need a variable that combines our `Date` and `Time` data created by `dr_readSonde()`. We need to concatenate these two variables togther using `str_c()`, and then store them as properly identified date-time data (which `R` calls `POSIXct`) using `as.POSIXct()`. These changes are both made using the [`mutate()`](http://dplyr.tidyverse.org/reference/mutate.html) function from [`dplyr`](http://dplyr.tidyverse.org), which allows us to create new variables. Once we have a date-time variable, we can use it as the `x` variable on our plot and plot a measure like specific conductance (`SpCond`) against it:
+The key feature of `driftR` is the correction of drift that occurs over time. We can visualize this change in our data with a few additional steps. Before we create the plot, we need a variable that combines our `Date` and `Time` data created by `dr_readSonde()`. We need to concatenate these two variables together using `str_c()`, and then store them as properly identified date-time data (which `R` calls `POSIXct`) using `as.POSIXct()`. These changes are both made using the [`mutate()`](http://dplyr.tidyverse.org/reference/mutate.html) function from [`dplyr`](http://dplyr.tidyverse.org), which allows us to create new variables. Once we have a date-time variable, we can use it as the `x` variable on our plot and plot a measure like specific conductance (`SpCond`) against it using the `geom_line()` geom from `ggplot2`:
 
 ```{r, eval=FALSE}
 df %>%
@@ -71,11 +71,13 @@ df %>%
     geom_line(mapping = aes(x = dateTime, y = SpCond))
 ```
 
-This code is an example of piping, a technique that is described in our article on [tidy evaluation](TidyEval.html). Note that we did not need to reference the data source in the initial `ggplot()` call - this is "passed" through the piped code. It will produce the following plot:
+This code is an example of piping, a technique that is described in our article on [tidy evaluation](TidyEval.html). The pipe operator (`%>%`) is loaded with the `dplyr` package. One advantage of using piped code is that we did not need to reference the data source in the initial `ggplot()` call - this is "passed" through the pipe. It will produce the following plot:
 
 ![](SpCond_line.png)
 
-This code should be portable from session to session with little modification (you'll have to change the dataframe name if you use something other than `df`).
+This code should be portable from session to session with little modification (you'll have to change the data frame name if you use something other than `df`).
+
+The use of piping here is important, because it allows us to make temporary changes to the shape and structure of the data frame without actually altering the underlying data in a permanent way. In this example, we can create a temporary date-time variable without needing to make it a permanent addition to the data. In the next section, we can temporarily reshape the data without, again, making that a permanent change.
 
 ### Comparing Corrected and Uncorrected Data 
 
@@ -113,7 +115,7 @@ The following code:
 
 You'll notice that each date-time point now has two rows, one for `SpCond` and one for `SpCond_Corr`. This is the hallmark of "long" formatted data.
 
-We can extend this example by adding a `ggplot()` call to use the "long" data to plot the difference between the corrected and uncorrected values. We've omitted the `arrange()` function here because it does not have a practicel impact on how our data are plotted.
+We can extend this example by adding a `ggplot()` call to use the "long" data to plot the difference between the corrected and uncorrected values. We've omitted the `arrange()` function here because it does not have a practical impact on how our data are plotted.
 
 ```{r, eval=FALSE}
 df %>%
@@ -129,3 +131,141 @@ The `group` argument in the aesthetic mapping ensures that our data are split by
 
 ![](SpCond_corrLine.png)
 
+### Smoothing Lines
+
+The data in the previous plot show the variance that happens between individual readings clearly - these are the jagged increases and decreases along the line. In certain circumstances it may make sense to smooth these lines to highlight a general trend rather than the individual readings. This can be done with a single modification to the previous pipe of functions. In place of the `geom_line()`, we can use `geom_smooth()` to apply smoothing. If we do not specify a specific method and formula, `ggplot2` will select what it believes to be the best approach for smoothing the data based on sample size and linearity. In this case, `ggplot2` defaults to using a generalized additive model with the equation `y ~ s(x, bs = "cs")`.
+
+```{r, eval=FALSE}
+df %>%
+  mutate(dateTime = str_c(Date, Time, sep = " ", collapse = NULL)) %>%
+  mutate(dateTime = as.POSIXct(dateTime, format = "%m/%d/%Y %H:%M:%S")) %>%
+  select(dateTime, SpCond, SpCond_Corr) %>%
+  gather(key = "measure", value = "value", SpCond, SpCond_Corr) %>%
+  ggplot() +
+    geom_smooth(mapping = aes(x = dateTime, y = value, group = measure, color = measure)) 
+```
+
+This does not produce a radically different plot in the case of specific conductance: 
+
+![](SpCond_corrSmooth.png)
+
+The use of `geom_smooth()` does, however, make a considerable difference in the case of pH. This is a line plot of the corrected and uncorrected pH variables (`ph_Corr` and `pH` respectively). They were made using the same approach as the last two plots, expect the references to specific conductance variables were swapped out for the pH variables.
+
+![](pH_corrLine.png)
+
+The impact of diurnal variation is pronounced here, giving the plot a block-y look because of the clustering of values around particular pH levels at particular times of day. The smoothed version of the plot removes much of the variation associated with diurnal fluctuation, but retains the more general trends in pH levels between the different days in the example data:
+
+![](pH_corrSmooth.png)
+
+### Scatterplots
+
+Scatter plots offer a convenient way to visualize the relationship between two variables. For instance, there is a strong relationship between temperature and pH level in the example data. We can visualize this relationship using the `geom_point()` geom in `ggplot2`:
+
+```{r, eval=FALSE}
+ggplot(data = df) +
+  geom_point(mapping = aes(x = temp, y = pH_Corr))
+```
+
+![](pHTemp.png)
+
+We can see a general trend in the relationship between temperature and pH level, with generally higher levels of pH associated with generally higher temperatures (in Celsius). This is interesting, but we can use `ggplot2` to dig further into the relationship. For instance, we can highlight each point on the scatter plot by its value on a third variable. In the example data, we can use the date variable for this purpose by referencing it in the `color` argument:
+
+```{r, eval=FALSE}
+ggplot(data = df) +
+  geom_point(mapping = aes(x = temp, y = pH_Corr, color = Date))
+```
+
+![](pHTempDate.png)
+
+Adding color to each point shows how individual days within the example data have particular patterns.
+
+### Faceted Scatterplots
+
+While the patterning stands out in the previous plot, we can go further by "faceting" it. This will produce a 2 x 4 matrix of scatter plots, one for each day in the data. To do this, we add the `facet_wrap()` function to our `ggplot()`, and indicate in `facet_wrap()` that we want to base the faceting on the `Date` variable. 
+
+```{r, eval=FALSE}
+ggplot(data = df) +
+  geom_point(mapping = aes(x = Temp, y = pH_Corr, color = Date)) +
+  facet_wrap(~ Date)
+```
+
+![](pHTempByDate.png)
+
+We can now see the variation between days as well as within them more clearly. Note that the inclusion of the tilde (`~`) in the `facet_wrap()` function is important!
+
+Finally, we can build in a bit more complexity by overlaying the points with a smoothed line. We do this by adding the same `geom_smooth()` function from earlier in the article between the `geom_point()` and `facet_wrap()` functions:
+
+```{r, eval=FALSE}
+ggplot(data = df) +
+  geom_point(mapping = aes(x = Temp, y = pH_Corr, color = Date)) +
+  geom_smooth(mapping = aes(x = Temp, y = pH_Corr, color = Date)) +
+  facet_wrap(~ Date)
+```
+
+![](pHTempByDate_smooth.png)
+
+As before, we did not specify a method for smoothing. Recall that `ggplot2` will attempt to pick the best smoother for the given data. In this case, `ggplot2`'s assessment is that the [LOESS](https://en.wikipedia.org/wiki/Local_regression) method is most appropriate. 
+
+The code we used above builds clearly on the previous `ggplot()` calls we have written, but the `geom_point()` and `geom_smooth()` functions contain the exact same data. Since `ggplot2` is particularly flexible, we have an alternative approach to writing the call that reduces the redundant code. This involves moving the aesthetic mapping from being specified in the individual geoms to being specified in the initial `ggplot()` function:
+
+```{r, eval=FALSE}
+ggplot(data = df, mapping = aes(x = Temp, y = pH_Corr, color = Date)) +
+  geom_point() +
+  geom_smooth() +
+  facet_wrap(~ Date)
+```
+
+This code will produce the same data, but with fewer characters needed. This makes debugging the code easier and, if shared, the code is easier to read and understand.
+
+### Comparing Two Groups
+
+A final common task we'll describe here is comparing two groups of data. In this case, we'll compare the distribution of pH values for the first three days and the second three days using a box plot. To do this, we'll need to create a temporary logical variable that is `TRUE` if the date is between 9/21 and 9/23 and `FALSE` if the date is between 9/18 and 9/20. We reference these dates in a `mutate()` function that uses `ifelse()` to set up a logical test. If the date is either 9/21, 9/22, 9/23, our new variable is assigned `TRUE` for that observation. Otherwise, that observation is assigned a `FALSE` value. We can then use this temporary variable as the `x` variable in our plot:
+
+```{r, eval=FALSE}
+df %>%
+  mutate(secondHalf = ifelse(Date == "9/21/2015" | Date == "9/22/2015" | Date == "9/23/2015", TRUE, FALSE)) %>%
+  ggplot() +
+    geom_boxplot(mapping = aes(x = secondHalf, y = pH_Corr))
+```
+
+![](pHTempByDate_box.png)
+
+We can see in this plot that values for `pH` were generally higher in the second half of the data collection period, though there were some outlier values in the first half of the data collection period that may warrant further exploration.
+
+## Plotting for Dissemination
+
+One final task with `ggplot2` is to add some additional information to each plot. We can easily add a title, subtitle, adjust the text of the `x` and `y` labels, and add a caption using the `labs()` function. We can also change the `x` axis to include a tick and value for each day instead of every other day. For example, we can edit the smoothed specific conductance that looked like this after it was first produced above:
+
+![](SpCond_corrSmooth.png)
+
+The following code re-builds that plot with changes both to the `x` axis values and to the plot as a whole:
+
+```{r, eval=FALSE}
+df %>%
+  mutate(dateTime = str_c(Date, Time, sep = " ", collapse = NULL)) %>%
+  mutate(dateTime = as.POSIXct(dateTime, format = "%m/%d/%Y %H:%M:%S")) %>%
+  select(dateTime, SpCond, SpCond_Corr) %>%
+  gather(key = "measure", value = "value", SpCond, SpCond_Corr) %>%
+  ggplot() +
+    geom_smooth(mapping = aes(x = dateTime, y = value, group = measure, color = measure)) +
+    scale_x_datetime(labels = date_format("%m-%d-%Y"), date_breaks = "1 day") +
+    labs(
+      title = "Comparison of Corrected and Uncorrected Specific Conductance Values",
+      subtitle = "Example Creek, Eastern Missouri",
+      x = "Date",
+      y = "Specific Conductance",
+      caption = "Smoothed using a generalized additive model; \nPlot produced by the Saint Louis University Hydrology and Geochemistry Research Lab"
+    )
+```
+
+![](disseminationPlot.png)
+
+Note the use of `\n` in the `caption` argument of `labs()`. This forces a line break in the caption to improve the readability of the text.
+
+Finally, we can save the plot using the `ggsave()` function:
+
+```{r, eval=FALSE}
+ggsave("plotName.png", width = 800, height = 600, units = "mm", dpi = 300)
+```
+
+This function will save whatever is currently in RStudio's Plots tab to the specified file in the specified dimensions and dots per inch resolution.
