complete other data vignette

--- a/vignettes/OtherData.Rmd
+++ b/vignettes/OtherData.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-While `driftR` is designed to work seemlessly with output from YSI Sonde instruments, it can also be used to correct data from other sources. There are only a few steps that would be needed to get data into a tidy `driftR` format. Below is a snapshot of the example data after they have been imported using the `dr_readSonde()` function. This is the expected format that `driftR` requires. 
+While `driftR` is designed to work seamlessly with output from YSI Sonde instruments, it can also be used to correct data from other sources. There are only a few steps that would be needed to get data into a tidy `driftR` format. Below is a snapshot of the example data after they have been imported using the `dr_readSonde()` function. This is the expected format that `driftR` requires. 
 
 ```{r, eval=FALSE}
 # A tibble: 1,527 x 11
@@ -28,22 +28,36 @@ While `driftR` is designed to work seemlessly with output from YSI Sonde instrum
 # ... with 1,517 more rows
 ```
 
+The sections below detail pre-processing steps that you may have to take to ready your data for use with `driftR`. 
+
+## Importing Data
+
+Data come in a variety of formats, and importing them into `R` can occasionally be a challenge. 
+
+* If your data are included in a flat file like a `csv`, `tsv`, `txt`, or another delimited file format, we recommend using the [`readr` package](http://readr.tidyverse.org). 
+* If your data are included in a Microsoft Excel file, we recommend using the [`readxl` package](http://readxl.tidyverse.org). 
+* If your data are included in a SPSS, SAS, or Stata file, we recommend using the [`haven` package](http://haven.tidyverse.org).  
+* If your data are are in a Microsoft Access database, we recommend using the [`RODBC` package]().
+* If your data are in another database format, we recommend [this article](http://db.rstudio.com/) on using Databases with `R`
+
+All of the example code below assumes you have a data frame named `waterData`.
+
 ## Metadata
 No metadata should be stored in observations. If metadata is present, remove it using the following technique. This example assumes that metadata is stored in row 1:
 
 ```{r, eval=FALSE}
-df <- df[-1,]
+waterData <- waterData[-1,]
 ```
 
 If there are multiple lines of metadata, they can be removed like so:
 
 ```{r, eval=FALSE}
-df <- df[-c(1, 2),]
+waterData <- waterData[-c(1, 2),]
 ```
 
 ## Tibbles
 
-Given the large size of data sets typical for these instruments, we encourage (but do not enforce) data to be stored as [tibbles](http://tibble.tidyverse.org). Tibbles are the [`tidyverse`](https://www.tidyverse.org) implementation of data frames. They print in a more organized manner and they behave in a more stable fashion. To convert your data to a tiblle, use the function [`as_tibble()`](http://tibble.tidyverse.org/reference/as_tibble.html):
+Given the large size of data sets typical for these instruments, we encourage (but do not enforce) data to be stored as [tibbles](http://tibble.tidyverse.org). Tibbles are the [`tidyverse`](https://www.tidyverse.org) implementation of data frames. They print in a more organized manner and they behave in a more stable fashion. To convert your data to a tibble, use the function [`as_tibble()`](http://tibble.tidyverse.org/reference/as_tibble.html):
 
 ```{r, eval=FALSE}
 library(tibble)
@@ -53,21 +67,22 @@ waterTibble <- as_tibble(waterData)
 
 ## Variable Names
 
-Variable names should be short and descriptive. We recommend using `camelCase` or `snake_case` to name variables. Use the [`rename()`](http://dplyr.tidyverse.org/reference/select.html) function from [`dplyr`](http://dplyr.tidyverse.org) to accomplish this. The function accepts the data frame name followed by a commoa and the new name set equal to the old name:
+Variable names should be short and descriptive. We recommend using `camelCase` or `snake_case` to name variables. Use the [`rename()`](http://dplyr.tidyverse.org/reference/select.html) function from [`dplyr`](http://dplyr.tidyverse.org) to accomplish this. The function accepts the data frame name followed by a comma and the new name set equal to the old name:
 
 ```{r, eval=FALSE}
-df <- rename(df, date = a.very.long.date.variable.name)
+waterTibble <- rename(waterTibble, date = a.very.long.date.variable.name)
 ```
 
 If you have a number of variables to rename, you can pipe them together:
 
 ```{r, eval=FALSE}
-df <- df %>%
-  rename(df, date = a.very.long.date.variable.name) %>%
-  rename(df, time = a.very.long.time.variable.name)
+waterTibble <- waterTibble %>%
+  rename(date = a.very.long.date.variable.name) %>%
+  rename(time = a.very.long.time.variable.name)
 ```
 
-## Date
+## Specific Variables
+### Date
 
 `driftR` expects date data to be stored in a character vector. The date variable should be formatted as either as `mm/dd/yyyy` or `yyyy-mm-dd`. To convert your date data to `mm/dd/yyyy`:
 
@@ -87,7 +102,7 @@ cleanDate <- as.character(cleanDate)
 
 Post-processing, if you have additional needs to work with your date data, we strongly suggest using the [`lubridate` package](http://lubridate.tidyverse.org).
 
-## Time
+### Time
 
 `driftR` expects time data to be stored in a character vector. The time variable should be formatted in `hh:mm:ss` format using a 24-hour clock. To convert your time data to `hh:mm:ss` in a 24-hour format:
 
@@ -96,16 +111,37 @@ times <- c("10:06 AM", "3:24 PM", "1:08 PM", "12:00 PM", "3:38 AM")
 cleanTime <- format(strptime(times, "%I:%M %p"), format="%H:%M:%S")
 ```
 
-## Temperature
+### Temperature
 
-`driftR` makes no direct use of the `Temp` data included in output. The [`weathermetrics` package](https://cran.r-project.org/web/packages/weathermetrics/index.html) includes functions for conversions between celsius and fahrenheit.
+`driftR` makes no direct use of the `Temp` data included in output. The [`weathermetrics` package](https://cran.r-project.org/web/packages/weathermetrics/index.html) includes functions for conversions between Celsius and Fahrenheit.
 
-## Other Measures
+### Other Measures
 
 Beyond date and time data, all measures should be stored as either double, integer, or numeric values:
 
 ```{r, eval=FALSE}
-df$measure <- as.numeric(measure)
-df$measure <- as.integer(measure)
-df$measure <- as.double(measure)
+waterTibble$measure <- as.numeric(waterTibble$measure)
+waterTibble$measure <- as.integer(waterTibble$measure)
+waterTibble$measure <- as.double(waterTibble$measure)
 ```
+
+### Building Pipes with Date, Time, and Other Functions
+
+You can integrate all of the non-tidyverse functions described here into [`mutate()`](http://dplyr.tidyverse.org/reference/mutate.html) function calls. The `mutate()` function is from the [`dplyr`](http://dplyr.tidyverse.org) package.
+
+```{r, eval=FALSE}
+waterTibble <- waterTibble %>%
+  mutate(temp = as.double(temp)) %>%
+  mutate(pH = as.double(pH)) %>%
+  mutate(NitrateN = as.integer(NitrateN))
+```
+
+## Removing Unneeded Variables
+
+Finally, if there are unneeded variables left in your data set at the end of the pre-processing stage, you can use the [`select()`](http://dplyr.tidyverse.org/reference/select.html) function from [`dplyr`](http://dplyr.tidyverse.org) to remove them. The function accepts the data frame name followed by a comma and the new name set equal to the old name:
+
+```{r, eval=FALSE}
+waterTibble <- select(waterTibble, -c(a.very.long.pH.variable.name, a.very.long.cholride.variable.name)))
+```
+
+Like all other `dplyr` functions, `select()` can be included in a pipe as well.
